--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: '/index2.html',
+        signInSuccessUrl: '/https://klaral.github.io/login/index2.html',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
