--- a/index3.html
+++ b/index3.html
@@ -264,9 +264,14 @@
     </script>
   </head>
   <body>
-    <h1>Welcome you are signed in</h1>
+   <!-- <h1>Welcome you are signed in</h1>
     <div id="sign-in-status"></div>
     <div id="sign-in"></div>
+    <div id="account-details"></div>-->
+      
+    <h1>Welcome you are signed in</h1>
+    <div id="sign-in-status"></div>
+    <button id="sign-in" class="btnactionhide"></button>
     <div id="account-details"></div>
   </body>
 </html>
