--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: '/login/index3.html',
-          /*signInSuccessUrl: '/index3',*/
+        /*signInSuccessUrl: '/login/index3.html',*/
+          signInSuccessUrl: '/index3',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
